--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     flex-direction: column;
     gap: 20px;
     height: 450px;
-    width: 343px;
+    width: 375px;
     padding: 25px;
     margin: 0 auto;
 }
@@ -27,7 +27,7 @@ body {
     flex-direction: column;
     height: 90px;
     background-color: lightgray;
-    width: 293px;
+    width: 100%;
     padding: 15px;
 }
 
@@ -39,19 +39,18 @@ body {
 .stored-value {
     height: 25px;
     font-size: 18px;
-    margin-bottom: 10px;
 }
 
 .current-value {
     height: 30px;
-    font-size: 30px;
+    font-size: 35px;
 }
 
 .btns-cntr {
     display: flex;
     flex-direction: column;
     row-gap: 10px;
-    width: 293px;
+    width: 100%;
 }
 
 .btns-divider {
@@ -61,13 +60,16 @@ body {
 }
 
 button {
-    width: 65.5px;
+    width: 73px;
     height: 50px;
+    flex: 1 1 auto;
     padding: 0;
+    font-size: 20px;
 }
 
 .clear-btn,
 .delete-btn {
-    width: 141px;
+    width: 157.5px;
     height: 50px;
+    flex: 1 1 auto;
 }
